Fix clipped focus outline

--- a/app/assets/stylesheets/transformation/components/_opportunity_list.scss
+++ b/app/assets/stylesheets/transformation/components/_opportunity_list.scss
@@ -4,7 +4,6 @@
   li {
     border: $stone-50 solid 2px;
     margin-bottom: $spacing-4;
-    overflow: hidden;
     padding: $spacing-3 0 0 0;
   }
 
